Main Writing Finished

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Assigment 4: Civil Engeneering - Page 1</title>
+<body style="background-color:rgb(255, 255, 255);"></body>
+</head>
+<body>
+    
+<h1></body>Assigment 4: Civil Engeneering</h1>
+<a href="part2/index2.html">Page 2: Civil Engeneering Expanded</a>
 
+
+<h3>Identify the career you choose:</h3>
+<p>The career Civil Engineering is a field of work which is focused around serving society to improve the quality of our lives, our economy and business activities in our society. Civil Engineers are in charge of the planning, construction, design, and management of infrastructure whether that means a skyscraper or apartment building in the city or designing the sewage/water system in order for it to be both structurally sound and serve its purpose. Additionally civil engineers are responsible for providing essential services such as supporting a sustained standard of living. To summarize Civil engineers are in charge of designing structurally sound waterways, coastal areas, ports, our homes,schools, and commercial complexes which are still able to efficiently serve their purpose.</p>
+
+<h3> <br>A brief description of the job and its responsibilities:</h3>
+<p>As mentioned above, Civil Engineers are in charge of designing structurally sound waterways, coastal areas, ports, our homes, schools, and commercial complexes which are still able to efficiently serve their purpose. Additionally Civil engineers often interpret the artistic designs of architects and use their skill in order to turn their visions into a reality. Civil engineers are also in charge of infrastructure ground, the water and the air.</p>
+
+<h3><br>The education required for such a career:</h3>
+<p>The highschool education/courses required to become a civil engineer includes: English/anglais (ENG4U/EAE4U preferred), Advanced Functions (MHF4U), Calculus and Vectors (MCV4U), Physics (SPH4U), Chemistry (SCH4U). These courses will have to be at least over 70% to be accepted into a civil engineer Program at most universities in Canada.</p>
+
+<h3><br>The future possibilities (outlook) for that career:</h3>
+<p>The future outlook for the Civil engineering career employment is projected to grow 7% from 2021 to 2031, this is usually the average for growth of careers. Civil engineering is projected to grow by 24,200 openings each year on average over the decade in the United States. </p>
+
+<h3><br>The salary range:</h3>
+<p>The average salary for a civil engineer in Canada is around $120,432 CAD and approximately per year or $61.76 CAD per hour. The most experienced Civil Engineers make up to $123,877 per year.</p>
+
+<h3><br>A description why you would or would not be interested in such a career:</h3>
+<p>I would be interested in a career in Civil Engineering because I've always been interested in how things work and the physical world so Civil Engineering feels like it would be a perfect fit considering I would be working and designing structures that would interact with the physical world on a daily basis like the infrastructure all around us. I’ve also always been interested in creating and designing things whether that means creating a wooden bridge out of popsicle sticks or thinking up concepts about infrastructure that doesn't exist in the world today.</p>
+
+</body>
+</html>
