--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
     
 <h1></body>Assigment 4: Civil Engeneering</h1>
-<a href="part2/index2.html">Page 2: Civil Engeneering Expanded</a>
-
+<a href="index.html">Page 1: Civil Engeneering & Home<br></a>
+<a href="part2/index2.html">Page 2: Civil Engeneering Expanded<br></a>
+<a href="sources/index3.html">Page 3: Sources</a>
 
 <h3>Identify the career you choose:</h3>
 <p>The career Civil Engineering is a field of work which is focused around serving society to improve the quality of our lives, our economy and business activities in our society. Civil Engineers are in charge of the planning, construction, design, and management of infrastructure whether that means a skyscraper or apartment building in the city or designing the sewage/water system in order for it to be both structurally sound and serve its purpose. Additionally civil engineers are responsible for providing essential services such as supporting a sustained standard of living. To summarize Civil engineers are in charge of designing structurally sound waterways, coastal areas, ports, our homes,schools, and commercial complexes which are still able to efficiently serve their purpose.</p>
