--- a/part2/index2.html
+++ b/part2/index2.html
@@ -4,8 +4,11 @@
 <title>Assigment 4: Civil Engeneering Expanded - Page 2</title>
 </head>
 <body>
-
 <h1>Assigment 4: Civil Engeneering Expanded</h1>
+
+<a href="index.html">Page 1: Civil Engeneering & Home<br></a>
+<a href="part2/index2.html">Page 2: Civil Engeneering Expanded<br></a>
+<a href="sources/index3.html">Page 3: Sources</a>
 
 <h3><br>Identify the educational institution:
 </h3>
